drools/drools-workbench-showcase/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: drools-workbench-showcase
  labels:
    app.kubernetes.io/name: drools-workbench-showcase
    app.kubernetes.io/instance: drools-workbench-showcase
